[project]
name = "brentstonecom"
version = "0.1.0"
description = "mkdocs-material based blog for brent-stone.com"
authors = [
    {name = "Brent Stone"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "mkdocs-material (>=9.6.12,<10.0.0)",
    "mkdocs-rss-plugin (>=1.17.1,<2.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.4.5,<2.0.0)",
    "mkdocs-glightbox (>=0.4.0,<0.5.0)"
]
[project.urls]
Homepage = "https://www.brent-stone.com"
Repository = "https://github.com/brent-stone/com"
Documentation = "https://github.com/brent-stone/com"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
poetry-plugin-up = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
